Added hooman structure

--- a/OOP Template/OOP Template.vcxproj
+++ b/OOP Template/OOP Template.vcxproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <ClCompile Include="Src\Food.cpp" />
     <ClCompile Include="Src\Game.cpp" />
+    <ClCompile Include="Src\Hooman.cpp" />
     <ClCompile Include="Src\Quadtree.cpp" />
     <ClCompile Include="Src\Setup.cpp" />
     <ClCompile Include="Src\Tools\Font.cpp" />
@@ -178,6 +179,7 @@
   <ItemGroup>
     <ClInclude Include="Src\Food.h" />
     <ClInclude Include="Src\Game.h" />
+    <ClInclude Include="Src\Hooman.h" />
     <ClInclude Include="Src\includes.h" />
     <ClInclude Include="Src\Quadtree.h" />
     <ClInclude Include="Src\Setup.h" />
