--- a/OOP Template/OOP Template.vcxproj.filters
+++ b/OOP Template/OOP Template.vcxproj.filters
@@ -39,16 +39,13 @@
     <ClCompile Include="Src\Tools\FRect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Food.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Src\Setup.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Src\Quadtree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Hooman.cpp">
+    <ClCompile Include="Src\Entity.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -80,13 +77,10 @@
     <ClInclude Include="Src\Setup.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Food.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Src\Quadtree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Hooman.h">
+    <ClInclude Include="Src\Entity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
