Kind of added number buttons implementation

--- a/OOP Template/OOP Template.vcxproj.filters
+++ b/OOP Template/OOP Template.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Src\Dropdown.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\NumberButton.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Game.h">
@@ -108,6 +111,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Dropdown.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\NumberButton.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
