--- a/OOP Template/OOP Template.vcxproj
+++ b/OOP Template/OOP Template.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="Src\Dropdown.cpp" />
     <ClCompile Include="Src\Entity.cpp" />
     <ClCompile Include="Src\Game.cpp" />
+    <ClCompile Include="Src\NumberButton.cpp" />
     <ClCompile Include="Src\Overlay.cpp" />
     <ClCompile Include="Src\Quadtree.cpp" />
     <ClCompile Include="Src\Setup.cpp" />
@@ -186,6 +187,7 @@
     <ClInclude Include="Src\Entity.h" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\includes.h" />
+    <ClInclude Include="Src\NumberButton.h" />
     <ClInclude Include="Src\Overlay.h" />
     <ClInclude Include="Src\Quadtree.h" />
     <ClInclude Include="Src\Setup.h" />
