--- a/OOP Template/OOP Template.vcxproj
+++ b/OOP Template/OOP Template.vcxproj
@@ -163,12 +163,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Src\BoolButton.cpp" />
-    <ClCompile Include="Src\Dropdown.cpp" />
+    <ClCompile Include="Src\Tools\Menu\Overlay\BoolButton.cpp" />
+    <ClCompile Include="Src\Tools\Menu\Dropdown.cpp" />
     <ClCompile Include="Src\Entity.cpp" />
     <ClCompile Include="Src\Game.cpp" />
-    <ClCompile Include="Src\NumberButton.cpp" />
-    <ClCompile Include="Src\Overlay.cpp" />
+    <ClCompile Include="Src\Tools\Menu\Overlay\NumberButton.cpp" />
+    <ClCompile Include="Src\Tools\Menu\Overlay\Overlay.cpp" />
     <ClCompile Include="Src\Quadtree.cpp" />
     <ClCompile Include="Src\Setup.cpp" />
     <ClCompile Include="Src\Tools\DebugTools.cpp" />
@@ -181,14 +181,14 @@
     <ClCompile Include="Src\Tools\TM.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Src\BoolButton.h" />
-    <ClInclude Include="Src\Button.h" />
-    <ClInclude Include="Src\Dropdown.h" />
+    <ClInclude Include="Src\Tools\Menu\Overlay\BoolButton.h" />
+    <ClInclude Include="Src\Tools\Menu\Overlay\Button.h" />
+    <ClInclude Include="Src\Tools\Menu\Dropdown.h" />
     <ClInclude Include="Src\Entity.h" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\includes.h" />
-    <ClInclude Include="Src\NumberButton.h" />
-    <ClInclude Include="Src\Overlay.h" />
+    <ClInclude Include="Src\Tools\Menu\Overlay\NumberButton.h" />
+    <ClInclude Include="Src\Tools\Menu\Overlay\Overlay.h" />
     <ClInclude Include="Src\Quadtree.h" />
     <ClInclude Include="Src\Setup.h" />
     <ClInclude Include="Src\Tools\DebugTools.h" />
