Use SDL in linux
For linux, use the SDL packages that are should've been installed as
told in README. This also has support for Windows were SDL is defined in
project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,22 +2,35 @@ set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 
 cmake_minimum_required(VERSION 3.5)
 
-project(Guys VERSION 1.0) # Set variable PROJECT_NAME
+project(Guys VERSION 1.0.3)
 
-add_executable(output) # Create a executable from main.cpp
+
+if (WIN32)
+	link_directories(${CMAKE_SOURCE_DIR}/Dependencies/SDL_FULL/x86/) # Call before to make sure VS detects it
+endif()
+
+
+if(UNIX)
+	find_package(SDL2 REQUIRED)
+endif()
+
+
+add_executable(output) 
 
 target_include_directories(output 
 		PUBLIC 
 		./
-		./Dependencies/SDL_FULL/include/
 		./Dependencies/json/single_include/nlohmann
 		./Dependencies/hopscotch-map/include/tsl
 		)
 
-link_directories(output
-		PUBLIC
-		./Dependencies/SDL_FULL/x86/
-		)
+if (WIN32)
+	target_include_directories(output PUBLIC ./Dependencies/SDL_FULL/include)
+endif()
+
+if(UNIX)
+	target_include_directories(output PUBLIC ${SDL2_INCLUDE_DIRS})
+endif()
 
 target_sources(output 
 		PUBLIC 
